add search and fix err
